membership page animations

--- a/faq.html
+++ b/faq.html
@@ -37,14 +37,14 @@
             praesentium nemo consequatur illo fugit ex odit! Temporibus labore dolorem ad sunt. Facilis voluptatum
             voluptas consequuntur veritatis nobis corrupti, debitis hic quam accusantium ex! Quis provident doloremque
             quidem architecto!</p>
-          <div class="faq-accordian-container">
+          <div class="faq-accordion-container">
             <div class="accordion accordion-flush" id="accordionExample"></div>
           </div>
         </section>
         <!-- FAQ Section End -->
 
         <!-- Footer Section Start -->
-        <custom-footer></custom-footer>
+        <!-- <custom-footer></custom-footer> -->
         <!-- Footer Section End -->
       </div>
       <!-- Main Content End -->
