--- a/membership.html
+++ b/membership.html
@@ -11,6 +11,8 @@
     <!-- Owl Carousel -->
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl.theme.default.css">
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="assets/css/animatenew.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <!-- Custom CSS -->
@@ -32,13 +34,15 @@
         <!-- Membership Section Start -->
         <section id="member" class="container text-center">
           <h3 class="section-title">Become A Member</h3>
-          <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem eum illo iste.
+          <p class="wow fadeIn section-description" data-wow-delay="0.2s">Lorem ipsum dolor sit
+            amet consectetur
+            adipisicing elit. Rem eum illo iste.
             Expedita optio eius neque
             praesentium nemo consequatur illo fugit ex odit! Temporibus labore dolorem ad sunt. Facilis voluptatum
             voluptas consequuntur veritatis nobis corrupti, debitis hic quam accusantium ex! Quis provident doloremque
             quidem architecto!</p>
           <div class="row column-gap-4 justify-content-center card-padding-small">
-            <div class="col-lg-3 col-md-5 mem-card">
+            <div class="wow backInLeft col-lg-3 col-md-5 mem-card">
               <h3 class="card-title">Free</h3>
               <p class="card-price">Price: <span style="color: var(--primary-color);">$0</span></p>
               <ul>
@@ -53,7 +57,7 @@
               <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#signUpModal">Sign
                 Up</button>
             </div>
-            <div class="col-lg-3 col-md-5 mem-card">
+            <div class="wow backInUp col-lg-3 col-md-5 mem-card">
               <h3 class="card-title">Standard</h3>
               <p class="card-price">Price: <span style="color: var(--primary-color);">$5</span></p>
               <ul>
@@ -68,7 +72,7 @@
               <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#signUpModal">Sign
                 Up</button>
             </div>
-            <div class="col-lg-3 col-md-5 mem-card">
+            <div class="wow backInRight col-lg-3 col-md-5 mem-card">
               <h3 class="card-title">Premium</h3>
               <p class="card-price">Price: <span style="color: var(--primary-color);">$10</span></p>
               <ul>
@@ -102,6 +106,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"></script>
+    <script src="assets/js/wow.js"></script>
     <script src="assets/js/custom.js"></script>
   </body>
 
