--- a/faq.html
+++ b/faq.html
@@ -11,6 +11,8 @@
     <!-- Owl Carousel -->
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl.theme.default.css">
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="assets/css/animatenew.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <!-- Custom CSS -->
@@ -32,19 +34,22 @@
         <!-- FAQ Section Start -->
         <section id="faq" class="container text-center">
           <h3 class="section-title">Frequently Asked Questions</h3>
-          <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem eum illo iste.
+          <p class="wow fadeIn section-description" data-wow-delay="0.2s">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Rem eum illo iste.
             Expedita optio eius neque
             praesentium nemo consequatur illo fugit ex odit! Temporibus labore dolorem ad sunt. Facilis voluptatum
             voluptas consequuntur veritatis nobis corrupti, debitis hic quam accusantium ex! Quis provident doloremque
             quidem architecto!</p>
-          <div class="faq-accordion-container">
-            <div class="accordion accordion-flush" id="accordionExample"></div>
+          <div class="wow fadeIn faq-accordion-container" data-wow-delay="0.4s">
+            <div class="accordion accordion-flush" id="accordionExample">
+
+            </div>
           </div>
         </section>
         <!-- FAQ Section End -->
 
         <!-- Footer Section Start -->
-        <!-- <custom-footer></custom-footer> -->
+        <custom-footer></custom-footer>
         <!-- Footer Section End -->
       </div>
       <!-- Main Content End -->
@@ -58,6 +63,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"></script>
+    <script src="assets/js/wow.js"></script>
     <script src="assets/js/custom.js"></script>
   </body>
 
