--- a/about.html
+++ b/about.html
@@ -11,6 +11,8 @@
     <!-- Owl Carousel -->
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl.theme.default.css">
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="assets/css/animatenew.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <!-- Custom CSS -->
@@ -32,12 +34,14 @@
         <!-- About Section Start -->
         <section id="faq" class="container text-center">
           <h3 class="section-title">About Us</h3>
-          <p class="section-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente voluptatem,
+          <p class="wow fadeIn section-description" data-wow-delay="0.2s">Lorem ipsum dolor sit amet consectetur,
+            adipisicing elit. Sapiente voluptatem,
             dolores deleniti quisquam qui fugit, nisi repellendus illum nostrum obcaecati unde doloremque sunt
             architecto provident velit autem, assumenda quos eum fuga rem iusto fugiat! Doloribus, blanditiis possimus
             cumque asperiores vitae nihil maxime quasi quas, sapiente cum ipsam nobis temporibus, nesciunt molestias
             quos neque? Quasi harum fuga dolorem eum id voluptatibus exercitationem unde quaerat labore eaque?</p>
-          <p class="section-description" style="margin-top: 1.5rem;">Lorem ipsum dolor, sit amet consectetur adipisicing
+          <p class="wow fadeIn section-description" style="margin-top: 1.5rem;" data-wow-delay="0.3s">Lorem ipsum dolor,
+            sit amet consectetur adipisicing
             elit. Nulla, assumenda
             perferendis voluptate nobis earum harum? Quisquam reprehenderit numquam recusandae aliquam unde itaque
             impedit quae dolorem sequi magnam officia, in aliquid debitis rerum commodi. Explicabo omnis eligendi
@@ -58,6 +62,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"></script>
+    <script src="assets/js/wow.js"></script>
     <script src="assets/js/custom.js"></script>
   </body>
 
