--- a/index.html
+++ b/index.html
@@ -27,6 +27,41 @@
     <div class="main_wrapper">
       <!-- Header Start -->
       <custom-nav></custom-nav>
+      <!-- Search News Modal Start-->
+      <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="searchModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-scrollable">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel">Search News</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <div class="input-group mb-3">
+                <input type="text" id="news-search" class="form-control" aria-label="Sizing example input"
+                  placeholder="Search topic..." aria-describedby="inputGroup-sizing-default">
+              </div>
+              <div id="seached-news">
+
+              </div>
+              <!-- <div class="search-card-main">
+                <div class="search-card-img"
+                  style="background-image: url('https://a.espncdn.com/combiner/i?img=%2Fphoto%2F2022%2F1121%2Fr1094073_1296x729_16%2D9.jpg');">
+                </div>
+                <div>
+                  <p class="news-cardtag">ESPN</p>
+                  <h5>Rousey says concussions forced MMA retirement</h5>
+                  <p>Ronda Rousey revealed this week that she retired from mixed martial arts primarily due to a history
+                    of concussions.</p>
+                </div>
+              </div> -->
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Search News Modal End-->
       <!-- Header End -->
 
       <!-- Main Content Start -->
