--- a/index.html
+++ b/index.html
@@ -39,21 +39,20 @@
               <div class="input-group mb-3">
                 <input type="text" id="news-search" class="form-control" aria-label="Sizing example input"
                   placeholder="Search topic..." aria-describedby="inputGroup-sizing-default">
+                <span class="input-group-text" id="basic-addon2" style="cursor: pointer;">Search</span>
               </div>
-              <div id="seached-news">
+              <!-- <div id="seached-news">
 
-              </div>
-              <!-- <div class="search-card-main">
-                <div class="search-card-img"
-                  style="background-image: url('https://a.espncdn.com/combiner/i?img=%2Fphoto%2F2022%2F1121%2Fr1094073_1296x729_16%2D9.jpg');">
-                </div>
+              </div> -->
+              <div class="search-card-main">
+                <img src="https://a.espncdn.com/combiner/i?img=%2Fphoto%2F2022%2F1121%2Fr1094073_1296x729_16%2D9.jpg" alt="newsimg" class="search-card-img">
                 <div>
                   <p class="news-cardtag">ESPN</p>
                   <h5>Rousey says concussions forced MMA retirement</h5>
                   <p>Ronda Rousey revealed this week that she retired from mixed martial arts primarily due to a history
                     of concussions.</p>
                 </div>
-              </div> -->
+              </div>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
