search news modal and click on news

--- a/about.html
+++ b/about.html
@@ -29,6 +29,10 @@
       <custom-nav></custom-nav>
       <!-- Header End -->
 
+      <!-- Search News Modal Start -->
+      <search-news></search-news>
+      <!-- Search News Modal Start -->
+
       <!-- Main Content Start -->
       <div class="main_content">
         <!-- About Section Start -->
@@ -52,6 +56,10 @@
         <!-- About Section End -->
       </div>
       <!-- Main Content End -->
+
+      <!-- Footer Section Start -->
+      <custom-footer></custom-footer>
+      <!-- Footer Section End -->
     </div>
 
     <script src="assets/js/jQuery v3.7.1.min.js"></script>
