--- a/faq.html
+++ b/faq.html
@@ -29,6 +29,11 @@
       <custom-nav></custom-nav>
       <!-- Header End -->
 
+
+      <!-- Search News Modal Start -->
+      <search-news></search-news>
+      <!-- Search News Modal Start -->
+
       <!-- Main Content Start -->
       <div class="main_content">
         <!-- FAQ Section Start -->
