api key changed

--- a/membership.html
+++ b/membership.html
@@ -50,12 +50,12 @@
               <h3 class="card-title">Free</h3>
               <p class="card-price">Price: <span style="color: var(--primary-color);">$0</span></p>
               <ul>
-                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet</li>
+                <li>Lorem ipsum dolor sit amet</li>
+                <li>Lorem ipsum dolor sit amet</li>
+                <li>Lorem ipsum dolor sit amet</li>
               </ul>
               <!-- <button id="free" class="mem-button">Sign Up</button> -->
               <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#signUpModal">Sign
@@ -65,12 +65,12 @@
               <h3 class="card-title">Standard</h3>
               <p class="card-price">Price: <span style="color: var(--primary-color);">$5</span></p>
               <ul>
-                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet</li>
+                <li>Lorem ipsum dolor sit amet</li>
+                <li>Lorem ipsum dolor sit amet</li>
               </ul>
               <!-- <button id="standard" class="mem-button">Sign Up</button> -->
               <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#signUpModal">Sign
@@ -80,12 +80,12 @@
               <h3 class="card-title">Premium</h3>
               <p class="card-price">Price: <span style="color: var(--primary-color);">$10</span></p>
               <ul>
-                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet</li>
               </ul>
               <!-- <button id="premium" class="mem-button">Sign Up</button> -->
               <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#signUpModal">Sign
