--- a/contactUs.html
+++ b/contactUs.html
@@ -75,6 +75,9 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
               </form>
+              <div class="messsage-div">
+
+              </div>
             </div>
           </div>
         </section>
