--- a/contactUs.html
+++ b/contactUs.html
@@ -43,7 +43,7 @@
           <p class="wow fadeIn section-description" data-wow-delay="0.2s">Lorem ipsum dolor sit amet consectetur
             adipisicing elit. Suscipit iusto corrupti, qui quaerat recusandae deleniti quia ullam aliquam quisquam quam.
           </p>
-          <div class="contact-main">
+          <div class="wow fadeIn contact-main" data-wow-delay="0.3s">
             <div class="contact-details">
               <p class="contact-details-fields">Contact: <span>+91-9167949688</span></p>
               <a href="mailto:mandar.deshpande.eds@gmail.com">
@@ -76,7 +76,6 @@
                 <button type="submit" class="btn btn-primary">Submit</button>
               </form>
               <div class="messsage-div">
-
               </div>
             </div>
           </div>
