wow animation timedelay

--- a/about.html
+++ b/about.html
@@ -35,16 +35,25 @@
 
       <!-- Main Content Start -->
       <div class="main_content">
+
+        <!-- <div class="loading-spinner">
+          <div class="lds-ring">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+        </div> -->
         <!-- About Section Start -->
         <section id="faq" class="container text-center">
           <h3 class="section-title">About Us</h3>
-          <p class="wow fadeIn section-description" data-wow-delay="0.2s">Lorem ipsum dolor sit amet consectetur,
+          <p class="wow fadeIn section-description hide" data-wow-delay="0.2s">Lorem ipsum dolor sit amet consectetur,
             adipisicing elit. Sapiente voluptatem,
             dolores deleniti quisquam qui fugit, nisi repellendus illum nostrum obcaecati unde doloremque sunt
             architecto provident velit autem, assumenda quos eum fuga rem iusto fugiat! Doloribus, blanditiis possimus
             cumque asperiores vitae nihil maxime quasi quas, sapiente cum ipsam nobis temporibus, nesciunt molestias
             quos neque? Quasi harum fuga dolorem eum id voluptatibus exercitationem unde quaerat labore eaque?</p>
-          <p class="wow fadeIn section-description" style="margin-top: 1.5rem;" data-wow-delay="0.3s">Lorem ipsum dolor,
+          <p class="wow fadeIn section-description hide" style="margin-top: 1.5rem;" data-wow-delay="0.3s">Lorem ipsum dolor,
             sit amet consectetur adipisicing
             elit. Nulla, assumenda
             perferendis voluptate nobis earum harum? Quisquam reprehenderit numquam recusandae aliquam unde itaque
