--- a/contactUs.html
+++ b/contactUs.html
@@ -40,10 +40,10 @@
         <!-- Contact Section Start -->
         <section id="member" class="container text-center">
           <h3 class="section-title">Connect with us</h3>
-          <p class="wow fadeIn section-description" data-wow-delay="0.2s">Lorem ipsum dolor sit amet consectetur
+          <p class="wow fadeIn section-description hide" data-wow-delay="0.2s">Lorem ipsum dolor sit amet consectetur
             adipisicing elit. Suscipit iusto corrupti, qui quaerat recusandae deleniti quia ullam aliquam quisquam quam.
           </p>
-          <div class="wow fadeIn contact-main" data-wow-delay="0.3s">
+          <div class="wow fadeIn contact-main hide" data-wow-delay="0.3s">
             <div class="contact-details">
               <p class="contact-details-fields">Contact: <span>+91-9167949688</span></p>
               <a href="mailto:mandar.deshpande.eds@gmail.com">
@@ -64,10 +64,10 @@
                   <input type="text" id="name" class="form-control" placeholder="Enter name...." aria-label="Username"
                     aria-describedby="basic-addon1">
                 </div>
-                <div class="mb-3">
+                <div class="mb-4">
                   <input type="email" id="email" class="form-control" id="exampleInputEmail1"
                     aria-describedby="emailHelp" placeholder="something@domain.com">
-                  <div id="emailHelp" class="form-text">**We'll never share your email with anyone else.</div>
+                  <div id="emailHelp" class="form-text" style="font-size: small;">**We'll never share your email with anyone else.</div>
                 </div>
                 <div class="mb-3">
                   <textarea id="message" class="form-control" aria-label="With textarea"
