--- a/membership.html
+++ b/membership.html
@@ -38,7 +38,7 @@
         <!-- Membership Section Start -->
         <section id="member" class="container text-center">
           <h3 class="section-title">Become A Member</h3>
-          <p class="wow fadeIn section-description" data-wow-delay="0.2s">Lorem ipsum dolor sit
+          <p class="wow fadeIn section-description hide" data-wow-delay="0.2s">Lorem ipsum dolor sit
             amet consectetur
             adipisicing elit. Rem eum illo iste.
             Expedita optio eius neque
@@ -46,7 +46,7 @@
             voluptas consequuntur veritatis nobis corrupti, debitis hic quam accusantium ex! Quis provident doloremque
             quidem architecto!</p>
           <div class="row column-gap-4 justify-content-center card-padding-small">
-            <div class="wow backInLeft col-lg-3 col-md-5 mem-card">
+            <div class="wow backInLeft col-lg-3 col-md-5 mem-card hide">
               <h3 class="card-title">Free</h3>
               <p class="card-price">Price: <span style="color: var(--primary-color);">$0</span></p>
               <ul>
@@ -61,7 +61,7 @@
               <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#signUpModal">Sign
                 Up</button>
             </div>
-            <div class="wow backInUp col-lg-3 col-md-5 mem-card">
+            <div class="wow backInUp col-lg-3 col-md-5 mem-card hide">
               <h3 class="card-title">Standard</h3>
               <p class="card-price">Price: <span style="color: var(--primary-color);">$5</span></p>
               <ul>
@@ -76,7 +76,7 @@
               <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#signUpModal">Sign
                 Up</button>
             </div>
-            <div class="wow backInRight col-lg-3 col-md-5 mem-card">
+            <div class="wow backInRight col-lg-3 col-md-5 mem-card hide">
               <h3 class="card-title">Premium</h3>
               <p class="card-price">Price: <span style="color: var(--primary-color);">$10</span></p>
               <ul>
