--- a/faq.html
+++ b/faq.html
@@ -39,13 +39,13 @@
         <!-- FAQ Section Start -->
         <section id="faq" class="container text-center">
           <h3 class="section-title">Frequently Asked Questions</h3>
-          <p class="wow fadeIn section-description" data-wow-delay="0.2s">Lorem ipsum dolor sit amet consectetur
+          <p class="wow fadeIn section-description hide" data-wow-delay="0.2s">Lorem ipsum dolor sit amet consectetur
             adipisicing elit. Rem eum illo iste.
             Expedita optio eius neque
             praesentium nemo consequatur illo fugit ex odit! Temporibus labore dolorem ad sunt. Facilis voluptatum
             voluptas consequuntur veritatis nobis corrupti, debitis hic quam accusantium ex! Quis provident doloremque
             quidem architecto!</p>
-          <div class="wow fadeIn faq-accordion-container" data-wow-delay="0.4s">
+          <div class="wow fadeIn faq-accordion-container hide" data-wow-delay="0.4s">
             <div class="accordion accordion-flush" id="accordionExample">
 
             </div>
