--- a/exclusive.html
+++ b/exclusive.html
@@ -20,6 +20,13 @@
     <link rel="stylesheet" href="assets/css/responsive.css">
     <script src="assets/js/main.js"></script>
     <title>News Desk - Latest News, Anytime, Anywhere</title>
+    <script>
+      // Check if user is logged in
+      if (!sessionStorage.getItem('userid') || !sessionStorage.getItem('useremail')) {
+        // Redirect to index.html if not logged in
+        window.location.href = 'index.html';
+      }
+    </script>
   </head>
 
   <body>
